@@ -12,19 +12,15 @@ namespace AjPepsi
         GetConstant = 5,
         GetLocal = 6,
         SetLocal = 7,
-        GetClassVariable = 8,
-        SetClassVariable = 9,
-        GetGlobalVariable = 10,
-        SetGlobalVariable = 11,
-        GetBlock = 12,
+        GetGlobalVariable = 8,
+        SetGlobalVariable = 9,
+        GetBlock = 10,
 
         GetSelf = 20,
         GetClass = 21,
-        GetSuperClass = 22,
-        NewObject = 23,
-        Pop = 24,
-        ReturnSub = 25,
-        ReturnPop = 26,
+        NewObject = 22,
+        Pop = 23,
+        ReturnPop = 24,
 
         Add = 40,
         Substract = 41,
